# rune

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  FUTURE_OPTIMIZATIONS.md  Kick.toml  LICENSE-MIT  PR_SUMMARY.md  README.md  README.tpl  Rune.toml  UPGRADING.md
benches/: Cargo.toml  README.md  Rune.toml
benches/benches/: aoc_2020_11a.rs  aoc_2020_19b.rs  aoc_2020_1a.rs  aoc_2020_1b.rs  bench_main.rs  brainfuck.rs  capture_io.rs  comparison.rs  fib.rs  main.rs  nbodies.lua  nbodies.rn  primes.rn
benches/benches/benchmarks/: aoc_2020_11a.rs  aoc_2020_19b.rs  aoc_2020_1a.rs  aoc_2020_1b.rs  brainfuck.rs  external_functions.rs  fib.rs  mod.rs
benches/benches/comparisons/: eval.rs  primes.rs
capi/: Cargo.toml  README.md  cbindgen.toml  meson.build  rune.h
capi/examples/: function.c  minimal.c  type_hash.c
capi/src/: build.rs  context.rs  context_error.rs  diagnostics.rs  hash.rs  lib.rs  module.rs  runtime_context.rs  source.rs  sources.rs  stack.rs  standard_stream.rs  types.rs  unit.rs  value.rs  vm.rs  vm_error.rs
crates/rune/: .gitignore  Cargo.toml  README.md  Rune.toml
crates/rune-alloc/: .gitignore  Cargo.toml  README.md
crates/rune-alloc-macros/: Cargo.toml  README.md
crates/rune-alloc-macros/src/: context.rs  lib.rs  try_clone.rs
crates/rune-alloc/src/: boxed.rs  callable.rs  clone.rs  error.rs  fmt.rs  hint.rs  lib.rs  limit.rs  macros.rs  musli.rs  no_std.rs  path.rs  ptr.rs  public_macros.rs  raw_vec.rs  rc.rs  slice.rs  str.rs  sync.rs  tests.rs
crates/rune-alloc/tools/: import.ps1
crates/rune-cli/: Cargo.toml  README.md  build.rs
crates/rune-cli/src/: benches.rs  check.rs  doc.rs  loader.rs  main.rs  run.rs  tests.rs  visitor.rs
crates/rune-core/: Cargo.toml  README.md
crates/rune-core/src/: error.rs  hash.rs  item.rs  lib.rs  params.rs  protocol.rs  raw_str.rs  type_of.rs
crates/rune-ir/: Cargo.toml
crates/rune-ir/src/: lib.rs
crates/rune-languageserver/: Cargo.toml  README.md  build.rs
crates/rune-languageserver/src/: connection.rs  envelope.rs  fs.rs  lib.rs  main.rs  server.rs  state.rs  url.rs
crates/rune-macros/: Cargo.toml  README.md
crates/rune-macros/src/: any.rs  ast.rs  const_value.rs  context.rs  from_value.rs  function.rs  hash.rs  inst_display.rs  instrument.rs  internals.rs  item.rs  item_impl.rs  lib.rs  macro_.rs  module.rs  opaque.rs  option_spanned.rs  parse.rs  path_in.rs  quote.rs  spanned.rs  to_tokens.rs  to_value.rs
crates/rune-macros/tests/: derive.rs  test_rename.rs
crates/rune-modules/: Cargo.toml  README.md
crates/rune-modules/src/: base64.rs  capture_io.rs  core.rs  disable_io.rs  experiments.rs  fmt.rs  fs.rs  http.rs  io.rs  json.rs  lib.rs  macros.rs  net.rs  process.rs  rand.rs  signal.rs  test.rs  thread.rs  time.rs  toml.rs
crates/rune-shim/: Cargo.toml
crates/rune-shim/src/: lib.rs
crates/rune-ssa/: Cargo.toml  README.md
crates/rune-ssa/src/: block.rs  constant.rs  error.rs  global.rs  internal.rs  lib.rs  phi.rs  program.rs  term.rs  value.rs
crates/rune-testing/: Cargo.toml  README.md
crates/rune-testing/examples/: basic_add.rs  call_rune_fn.rs  custom_instance_fn.rs  evaluate_script.rs  from_value.rs  function_hash.rs  object.rs  run_diagnostics.rs  run_minimal.rs  tuple.rs  use_references.rs  vec_tuple.rs  vector.rs
crates/rune-testing/src/: lib.rs
crates/rune-testing/tests/: compiler_expr_assign.rs  compiler_expr_binary.rs  (+23 more)
crates/rune-tracing/: Cargo.toml  README.md
crates/rune-wasm/: .gitignore  Cargo.toml  README.md  module.js  package-lock.json  package.json  rollup.config.js  rollup.config.mjs  rune.js
crates/runestick/: Cargo.toml  README.md
crates/runestick-http/: Cargo.toml  README.md
crates/runestick-json/: Cargo.toml  README.md
crates/runestick-macros/: Cargo.toml  README.md
crates/runestick-time/: Cargo.toml  README.md
crates/st/: Cargo.toml  README.tpl
crates/stk-http/: Cargo.toml  README.md
crates/stk-json/: Cargo.toml  README.md
examples/: Cargo.toml  README.md  Rune.toml
examples/ace/: .gitignore  README.md  index.html
examples/examples/: async_join_externals.rs  basic_add.rs  call_rune_fn.rs  checked_add_assign.rs  complicated_enum.rs  concat_idents.rs  custom_instance_fn.rs  custom_mul.rs  external_enum.rs  external_struct.rs  from_value.rs  function_hash.rs  hot_reloading.rs  lookup_function.rs  minimal.rs  native_function.rs  object.rs  parsing_in_macro.rs  proxy.rs  references.rs  run_diagnostics.rs  run_minimal.rs  rune_function.rs  rune_function_macro.rs  scripts.rs  simple_external.rs  static_reference.rs  test.rn  tokio_spawn.rs  tuple.rs  type_extraction.rs  use_references.rs  vec_args.rs  vec_tuple.rs  vector.rs
examples/scripts/: change_me.rn
no-std/: Cargo.toml
no-std-examples/: .gitignore  Cargo.toml
no-std-examples/examples/: no_std_minimal.rs
no-std/examples/: minimal.rs
rune-cli/: Cargo.toml
rune-cli/src/: lib.rs  main.rs
rune-cli/tests/: test_arrays.rs  test_small_programs.rs
tests/: Cargo.toml  README.md  build.rs  compiler_literals.rs  compiler_warnings.rs  core_macros.rs  mod.rs  reference_error.rs  stmt_reordering.rs  test.rs  test_iter.rs  test_range.rs  test_result.rs  type_name_native.rs  type_name_rune.rs  vm_arithmetic.rs  vm_assign_exprs.rs  vm_general.rs  vm_not_used.rs  vm_pat.rs  vm_streams.rs  vm_test_mod.rs  vm_tuples.rs  vm_types.rs
tests/src/: capture_io.rs  capture_output.rs  lib.rs
tests/tests/: binary.rs  bug_326.rs  bug_344.rs  bug_417.rs  bug_422.rs  bug_428.rs  bug_454.rs  bugfixes.rs  char.rs  collections.rs  comments.rs  compiler_attributes.rs  compiler_docs.rs  compiler_expr_assign.rs  compiler_expr_binary.rs  compiler_fn.rs  compiler_general.rs  compiler_literals.rs  compiler_paths.rs  compiler_patterns.rs  compiler_use.rs  compiler_visibility.rs  compiler_warnings.rs  core_macros.rs  custom_macros.rs  destructuring.rs  external_enum.rs  external_ops.rs  for_loop.rs  generic_native.rs  generics.rs  getter_setter.rs  instance.rs  issue_456_backwards.rs  iterator.rs  match_external.rs  mod.rs  moved.rs  patterns.rs  reference_error.rs  (+44 more)
(+2060 files in other folders)
