[workspace]
members = [
    "crates/rune",
    "crates/rune-cli",
    "crates/rune-languageserver",
    "crates/rune-macros",
    "crates/rune-modules",
    "crates/rune-wasm",
    "examples",
    "no-std-examples",
    "benches",
    "tools/builder",
    "tools/site",
    "tools/generate",
]

[profile.bench]
lto = false
debug = true
