[workspace]
resolver = "2"
members = [
    "crates/*",
    "examples",
    "benches",
    "tools/*",
    "no-std-examples",
]
default-members = [
    "crates/*",
    "examples",
    "benches",
    "tools/site",
    "tools/builder",
]

[profile.bench]
lto = false
debug = true

[patch.crates-io]
hashbrown = { git = "https://github.com/udoprog/hashbrown", branch = "raw-infallible-context" }
