[workspace]
resolver = "2"

members = [
    "crates/*",
    "examples",
    "benches",
    "tools/*",
]

# no-std example requires nightly and defines its own #[panic_handler],
# which conflicts with std. Run separately: cargo run --manifest-path=no-std/Cargo.toml --example minimal
exclude = ["no-std"]

default-members = [
    "crates/*",
    "examples",
    "benches",
    "tools/site",
    "tools/builder",
]

[profile.bench]
lto = false
debug = true
