[package]
name = "rune-benches"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.27.0", features = ["macros"] }
criterion = "0.4.0"
anyhow = "1.0.70"
futures-executor = "0.3.28"

rune = { path = "../crates/rune", features = ["bench"] }
thiserror = "1.0.40"

[[bench]]
name    = "bench_main"
harness = false
