[package]
name = "rune-benches"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
rune = { path = "../crates/rune", features = ["bench", "capture-io"] }

tokio = { version = "1.28.1", features = ["macros"] }
criterion = "0.4.0"
anyhow = "1.0.71"
futures-executor = "0.3.28"

[[bench]]
name    = "bench_main"
harness = false
