[package]
name = "rune-examples"
version = "0.0.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
publish = false

[features]
full = ["rune-modules/full"]
default = ["full"]

[dependencies]
futures-executor = "0.3.17"
tokio = { version = "1.13.0", features = ["macros"] }

rune = {path = "../crates/rune"}
rune-modules = {path = "../crates/rune-modules"}
