[package]
name = "rune-cli"
version = "0.0.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.2.22", features = ["full"]}
env_logger = "0.7.1"

st-frontend = {version = "0.0.0", path = "../frontends/base"}
st-frontend-rune = {version = "0.0.0", path = "../frontends/rune"}
st = {version = "0.0.0", path = ".."}

anyhow = "1.0.32"