[package]
name = "rune-tests"
version = "0.0.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
publish = false
autotests = false

[features]
default = ["full", "tokio"]
full = ["rune-modules/full"]

[dependencies]
thiserror = "1.0.30"
futures-executor = "0.3.17"
tokio = { version = "1.13.0", optional = true, features = ["macros"] }

rune = { path = "../crates/rune" }
rune-modules = { path = "../crates/rune-modules", features = ["capture-io"] }

[[test]]
name = "test"
path = "test.rs"
