[package]
name = "rune-tests"
version = "0.0.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
publish = false
autotests = false

[[test]]
name = "test"
path = "test.rs"

[features]
default = ["full"]
full = ["rune-modules/full"]

[dependencies]
thiserror = "1.0.30"
futures-executor = "0.3.18"

rune = { path = "../crates/rune" }
rune-modules = { path = "../crates/rune-modules", features = ["capture-io"] }
