[package]
name = "rune-alloc"
version = "0.12.3"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.70"
description = "The Rune Language, an embeddable dynamic programming language for Rust."
documentation = "https://docs.rs/rune"
readme = "README.md"
homepage = "https://github.com/rune-rs/rune"
repository = "https://github.com/rune-rs/rune"
license = "MIT OR Apache-2.0"
keywords = ["language", "scripting", "scripting-language"]
categories = ["parser-implementations"]

[features]
default = ["std", "serde"]
std = ["alloc", "ahash/std"]
alloc = []

[dependencies]
serde = { version = "1.0", optional = true }
ahash = { version = "0.8.3", default-features = false }

[dev-dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
