[package]
name = "rune-alloc"
version = "0.14.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.81"
description = "The Rune Language, an embeddable dynamic programming language for Rust."
documentation = "https://docs.rs/rune"
readme = "README.md"
homepage = "https://github.com/rune-rs/rune"
repository = "https://github.com/rune-rs/rune"
license = "MIT OR Apache-2.0"
keywords = ["language", "scripting", "scripting-language"]
categories = ["parser-implementations"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(rune_nightly)'] }

[features]
default = ["std", "serde"]
std = ["alloc", "ahash/std", "serde?/std"]
alloc = []
inline-more = []
raw = []

[dependencies]
rune-alloc-macros = { version = "=0.14.0", path = "../rune-alloc-macros" }

serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
musli = { version = "0.0.131", default-features = false, features = ["alloc"], optional = true }
ahash = { version = "0.8.8", default-features = false }
pin-project = "1.1.0"

[dev-dependencies]
rune = { path = "../rune", features = ["alloc"] }

rand = { version = "0.8.5", features = ["small_rng"] }
tokio = { version = "1.28.1", default-features = false, features = ["rt", "macros"] }
