[package]
name = "rune-cli"
version = "0.14.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.91"
description = "An interpreter for the Rune Language, an embeddable dynamic programming language for Rust."
documentation = "https://docs.rs/rune"
readme = "README.md"
homepage = "https://github.com/rune-rs/rune"
repository = "https://github.com/rune-rs/rune"
license = "MIT OR Apache-2.0"
keywords = ["language", "scripting", "scripting-language"]
categories = ["parser-implementations"]

default-run = "rune"

[dependencies]
rune = { version = "0.14.0", path = "../rune", features = ["cli", "tracing"] }
rune-modules = { version = "0.14.0", path = "../rune-modules", features = ["full"] }

[build-dependencies]
anyhow = "1.0.71"

[[bin]]
name = "rune"
path = "src/main.rs"
