[package]
name = "rune-core"
version = "0.14.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.76"
description = "Core components for the Rune Language, an embeddable dynamic programming language for Rust."
documentation = "https://docs.rs/rune"
readme = "README.md"
homepage = "https://github.com/rune-rs/rune"
repository = "https://github.com/rune-rs/rune"
license = "MIT OR Apache-2.0"
keywords = ["language", "scripting", "scripting-language"]
categories = ["parser-implementations"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(rune_nightly)'] }

[features]
default = ["alloc"]
doc = []
std = ["alloc", "rune-alloc/std"]
alloc = ["serde/alloc", "rune-alloc/alloc"]

[dependencies]
rune-alloc = { version = "0.14.0", path = "../rune-alloc", default-features = false, features = ["serde"] }

twox-hash = { version = "1.6.3", default-features = false }
serde = { version = "1.0.163", default-features = false, features = ["derive"] }
byteorder = { version = "1.4.3", default-features = false }
musli = { version = "0.0.121", default-features = false, optional = true }

[dev-dependencies]
rune = { package = "rune-shim", path = "../rune-shim", features = ["core", "alloc"] }
