[package]
name = "rune-ir"
version = "0.6.16"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/rune-rs/rune"
homepage = "https://github.com/rune-rs/rune"
documentation = "https://docs.rs/rune"
keywords = ["language", "scripting"]
categories = []
description = """
Intermediate representation of Rune.
"""

[dependencies]
runestick = {version = "0.6.16", path = "../runestick"}
