[package]
name = "rune-languageserver"
version = "0.12.3"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.65"
description = "A language server for the Rune Language, an embeddable dynamic programming language for Rust."
documentation = "https://docs.rs/rune"
readme = "README.md"
homepage = "https://github.com/rune-rs/rune"
repository = "https://github.com/rune-rs/rune"
license = "MIT/Apache-2.0"
keywords = ["language", "scripting", "scripting-language"]
categories = ["parser-implementations"]

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
anyhow = "1.0.70"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.16"

rune = { version = "0.12.3", path = "../rune", features = ["languageserver"] }
rune-modules = { version = "0.12.3", path = "../rune-modules", features = ["full", "experiments"] }

[build-dependencies]
anyhow = "1.0.70"
