[package]
name = "rune-languageserver"
version = "0.12.4"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.63"
description = "A language server for the Rune Language, an embeddable dynamic programming language for Rust."
documentation = "https://docs.rs/rune"
readme = "README.md"
homepage = "https://github.com/rune-rs/rune"
repository = "https://github.com/rune-rs/rune"
license = "MIT/Apache-2.0"
keywords = ["language", "scripting", "scripting-language"]
categories = ["parser-implementations"]

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
lsp = { version = "0.93.0", package = "lsp-types" }
futures-core = "0.3.21"
anyhow = "1.0.60"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
hashbrown = "0.12.3"
tracing = "0.1.36"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.15"
ropey = "1.5.0"

rune = { version = "0.12.4", path = "../rune" }
rune-modules = { version = "0.12.4", path = "../rune-modules", features = ["full", "experiments"] }

[build-dependencies]
anyhow = "1.0.60"
