[package]
name = "rune-languageserver"
version = "0.13.1"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.70"
description = "A language server for the Rune Language, an embeddable dynamic programming language for Rust."
documentation = "https://docs.rs/rune"
readme = "README.md"
homepage = "https://github.com/rune-rs/rune"
repository = "https://github.com/rune-rs/rune"
license = "MIT OR Apache-2.0"
keywords = ["language", "scripting", "scripting-language"]
categories = ["parser-implementations"]

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
anyhow = "1.0.71"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

rune = { version = "0.13.1", path = "../rune", features = ["languageserver"] }
rune-modules = { version = "0.13.1", path = "../rune-modules", features = ["full", "experiments"] }

[build-dependencies]
anyhow = "1.0.71"
