[package]
name = "rune-macros"
version = "0.12.3"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.65"
description = "Macros for the Rune Language, an embeddable dynamic programming language for Rust."
documentation = "https://docs.rs/rune"
readme = "README.md"
homepage = "https://github.com/rune-rs/rune"
repository = "https://github.com/rune-rs/rune"
license = "MIT/Apache-2.0"
keywords = ["language", "scripting", "scripting-language"]
categories = ["parser-implementations"]

[dependencies]
syn = { version = "2.0.14", features = ["full"] }
quote = "1.0.26"
proc-macro2 = { version = "1.0.56", features = ["span-locations"] }

[dev-dependencies]
rune = { version = "0.12.3", path = "../rune" }

[lib]
proc-macro = true
path = "src/lib.rs"
