[package]
name = "rune-macros"
version = "0.14.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.92"
description = "Macros for the Rune Language, an embeddable dynamic programming language for Rust."
documentation = "https://docs.rs/rune"
readme = "README.md"
homepage = "https://github.com/rune-rs/rune"
repository = "https://github.com/rune-rs/rune"
license = "MIT OR Apache-2.0"
keywords = ["language", "scripting", "scripting-language"]
categories = ["parser-implementations"]

[dependencies]
rune-core = { version = "=0.14.0", path = "../rune-core", features = ["std"] }
syn = { version = "2.0.16", features = ["full"] }
quote = "1.0.27"
proc-macro2 = "1.0.56"

[lib]
proc-macro = true

[dev-dependencies]
rune = { path = "../rune" }
rune-core = { path = "../rune-core" }
