[package]
name = "rune-modules"
version = "0.12.3"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.64"
description = "Native modules for Rune, an embeddable dynamic programming language for Rust."
documentation = "https://docs.rs/rune"
readme = "README.md"
homepage = "https://github.com/rune-rs/rune"
repository = "https://github.com/rune-rs/rune"
license = "MIT/Apache-2.0"
keywords = ["language", "scripting", "scripting-language"]
categories = ["parser-implementations"]

[features]
default = ["test", "core", "io", "fmt", "macros", "disable-io"]
full = ["time", "http", "json", "toml", "fs", "process", "signal", "rand", "io", "fmt", "macros"]
time = ["tokio", "tokio?/time"]
fs = ["tokio", "tokio?/fs"]
http = ["reqwest"]
json = ["serde_json"]
process = ["tokio?/process"]
signal = ["tokio?/signal"]
rand = ["nanorand"]
experiments = []
capture-io = ["parking_lot"]
disable-io = []
test = []
core = []
io = []
fmt = []
macros = []

[dependencies]
reqwest = { version = "0.11.16", optional = true, default-features = false, features = ["rustls-tls", "gzip", "json"] }
tokio = { version = "1.27.0", optional = true }
serde_json = { version = "1.0.95", optional = true }
toml = { version = "0.5.11", optional = true }
nanorand = { version = "0.7.0", optional = true, features = ["getrandom"] }
parking_lot = { version = "0.12.1", optional = true }

rune = { version = "0.12.3", path = "../rune" }

[package.metadata.docs.rs]
all-features = true
