[package]
name = "rune-modules"
version = "0.14.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.92"
description = "Native modules for Rune, an embeddable dynamic programming language for Rust."
documentation = "https://docs.rs/rune"
readme = "README.md"
homepage = "https://github.com/rune-rs/rune"
repository = "https://github.com/rune-rs/rune"
license = "MIT OR Apache-2.0"
keywords = ["language", "scripting", "scripting-language"]
categories = ["parser-implementations"]

[features]
default = ["test", "core", "io", "fmt"]
full = [
    "time",
    "http",
    "json",
    "toml",
    "fs",
    "process",
    "signal",
    "rand",
    "os_rng",
    "small_rng",
    "std_rng",
    "thread_rng",
    "io",
    "fmt",
    "base64",
]
time = ["tokio/time"]
fs = ["tokio/fs"]
http = ["reqwest"]
json = ["serde_json"]
process = ["tokio/process", "rune/std"]
signal = ["tokio/signal"]
test = []
core = []
io = []
fmt = []
macros = []
rand = ["dep:rand"]
os_rng = ["getrandom", "rand?/os_rng"]
small_rng = ["rand?/small_rng"]
std_rng = ["rand?/std_rng"]
thread_rng = ["rand?/thread_rng"]

[dependencies]
base64 = { version = "0.22.0", optional = true }
tokio = { version = "1.28.1", optional = true }
serde_json = { version = "1.0.96", optional = true }
toml = { version = "0.9.10", optional = true }
rand = { version = "0.9.1", optional = true, default-features = false }
getrandom = { version = "0.3.0", optional = true }

rune = { version = "0.14.0", path = "../rune" }

[dependencies.reqwest]
version = "0.13.1"
optional = true
default-features = false
features = [
    "gzip",
    "json",
]

[package.metadata.docs.rs]
all-features = true
