[package]
name = "rune-testing"
version = "0.6.11"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/rune-rs/rune"
homepage = "https://github.com/rune-rs/rune"
documentation = "https://docs.rs/rune-testing"
keywords = ["language", "scripting"]
categories = []
description = """
Test helpers for Rune, an embeddable dynamic programming language for Rust. 
"""

[dependencies]
futures-executor = "0.3.5"
tokio = {version = "0.2.12", features = ["macros"]}

rune = {version = "0.6.11", path = "../rune"}
runestick = {version = "0.6.11", path = "../runestick"}
