[package]
name = "rune-wasm"
version = "0.12.3"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.65"
description = "A WASM module for the Rune Language, an embeddable dynamic programming language for Rust."
documentation = "https://docs.rs/rune"
readme = "README.md"
homepage = "https://github.com/rune-rs/rune"
repository = "https://github.com/rune-rs/rune"
license = "MIT/Apache-2.0"
keywords = ["language", "scripting", "scripting-language"]
categories = ["parser-implementations"]

[dependencies]
serde = { version = "1.0.159", features = ["derive"] }
wasm-bindgen = { version = "0.2.84", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.34"
js-sys = "0.3.61"
anyhow = "1.0.70"
gloo-utils = "0.1.6"

rune = { version = "0.12.3", path = "../rune" }
rune-macros = { version = "=0.12.3", path = "../rune-macros" }
rune-modules = { version = "0.12.3", path = "../rune-modules", features = ["core", "test", "json", "toml", "rand", "experiments"] }

[dependencies.web-sys]
version = "0.3.61"
features = ["Request", "Response", "Window", "RequestInit", "RequestMode"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[package.metadata.wasm-pack.profile.release]
# Note: doesn't work
wasm-opt = false
