[package]
name = "rune"
version = "0.12.3"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.65"
description = "The Rune Language, an embeddable dynamic programming language for Rust."
documentation = "https://docs.rs/rune"
readme = "README.md"
homepage = "https://github.com/rune-rs/rune"
repository = "https://github.com/rune-rs/rune"
license = "MIT/Apache-2.0"
keywords = ["language", "scripting", "scripting-language"]
categories = ["parser-implementations"]

[features]
default = ["emit", "std"]
emit = ["codespan-reporting"]
bench = []
workspace = ["toml", "semver", "relative-path", "serde-hashkey", "linked-hash-map"]
doc = ["rust-embed", "handlebars", "pulldown-cmark", "syntect", "sha2", "base64"]
cli = ["doc", "bincode", "atty", "tracing-subscriber", "clap", "webbrowser", "capture-io", "disable-io", "languageserver", "fmt", "similar"]
languageserver = ["lsp", "ropey", "percent-encoding", "url", "serde_json", "tokio", "tokio/macros", "tokio/io-std", "workspace", "doc"]
capture-io = ["parking_lot"]
disable-io = []
fmt = []
std = ["alloc", "anyhow", "thiserror", "num/std", "serde/std"]
alloc = []

[dependencies]
rune-macros = { version = "=0.12.3", path = "../rune-macros" }

byteorder = { version = "1.4.3", default-features = false }
futures-core = { version = "0.3.28", default-features = false }
futures-util = { version = "0.3.28", default-features = false, features = ["alloc"] }
itoa = "1.0.6"
num = { version = "0.4.0", default-features = false, features = ["alloc"] }
pin-project = "1.0.12"
ryu = "1.0.13"
serde = { version = "1.0.162", default-features = false, features = ["derive", "alloc", "rc"] }
serde_bytes = { version = "0.11.9", default-features = false, features = ["alloc"] }
smallvec = { version = "1.10.0", default-features = false, features = ["serde", "const_new"] }
thiserror-impl = { version = "1.0.40", default-features = false }
tracing =  { version = "0.1.37", default-features = false, features = ["attributes"] }
twox-hash = { version = "1.6.3", default-features = false }
hashbrown = { version = "0.13.2", features = ["serde"] }

anyhow = { version = "1.0.71", features = ["std"], optional = true }
atty = { version = "0.2.14", optional = true }
bincode = { version = "1.3.3", optional = true }
clap = { version = "4.2.7", features = ["derive"], optional = true }
codespan-reporting = { version = "0.11.1", optional = true }
handlebars = { version = "4.3.6", optional = true }
pulldown-cmark = { version = "0.9.2", optional = true }
relative-path = { version = "1.8.0", optional = true, features = ["serde"] }
rust-embed = { version = "6.6.1", optional = true }
semver = { version = "1.0.17", optional = true, features = ["serde"] }
serde-hashkey = { version = "0.4.5", optional = true }
syntect = { version = "5.0.0", optional = true }
thiserror = { version = "1.0.40", optional = true }
tokio = { version = "1.28.0", features = ["rt-multi-thread", "fs"], optional = true }
toml = { version = "0.7.3", optional = true, features = ["parse"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"], optional = true }
webbrowser = { version = "0.8.9", optional = true }
parking_lot = { version = "0.12.1", optional = true }
lsp = { version = "0.94.0", package = "lsp-types", optional = true }
ropey = { version = "1.6.0", optional = true }
percent-encoding = { version = "2.2.0", optional = true }
url = { version = "2.3.1", optional = true }
serde_json = { version = "1.0.96", optional = true }
linked-hash-map = { version = "0.5.6", optional = true }
similar = { version = "2.2.1", optional = true, features = ["inline"] }
sha2 = { version = "0.10.6", optional = true }
base64 = { version = "0.21.0", optional = true }

[dev-dependencies]
tokio = { version = "1.28.0", features = ["full"] }
static_assertions = "1.1.0"
checkers = "0.6.3"
futures-executor = "0.3.28"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
